# onlydjango

./: .env_sample  .env_sample.dev  .gitignore  .rules  .zshrc  AGENTS.md  GEMINI.md  README.md  env.sample  get_steering.py  move_docs.py  package-lock.json  package.json  project_setup.py  pyproject.toml  pyrightconfig.json  setupdev.bat  setupdev.py  sync_rules.py  tailwind.config.js
.claude/rules/: arbitrary-tailwind.md  avoiding-n-plus-1.md  checks.md  cotton-components.md  db-schema.md  dont-bother-with-admin.md  dont-create-migrations.md  dont-create-random-markdown.md  environment-variables.md  fat-models-thin-views.md  gemini-agents.md  harder-tasks.md  keep-ui-lean.md  managing-focus.md  models-and-views-structure.md  never-truncate-text.md  paginate.md  playwright-testing.md  project-conventions.md  project-setup.md  refactoring.md  signals-tasks-commands.md  using-django-forms.md  writing-tests.md  writing-views.md
.cursor/rules/: admin.mdc  avoiding-n1-queries.mdc  code-validation.mdc  forms.mdc  html-templates.mdc  managing-focus.mdc  markdown-files.mdc  migrations.mdc  model-schema-verification.mdc  models.mdc  override-kiro-behaviors.mdc  playwright-testing.mdc  refactoring-guidelines.mdc  signals-tasks.mdc  tailwind-config.mdc  task-delegation.mdc  tests.mdc  views.mdc
.github/: dependabot.yml
.github/workflows/: cache.yml  static-files.yml
.kiro/agents/: cotton_components.md  refactor.md
.kiro/hooks/: check-banned-tags-new.kiro.hook  check-banned-tags.kiro.hook
.kiro/steering/: Keep UI code lean.md  Never truncate text.md  Writing views.md  avoiding n+1.md  checks.md  cotton docs summarized.md  cotton file naming system.md  database-compatibility.md  db_schema.md  do not create partials.md  dont bother with admin.md  dont create migrations.md  dont create random markdown files.md  dont use these django template tags.md  fat models and thin views.md  gemini-agents.md  harder tasks.md  ignore these guidelines.md  index.md  kandy component design.md  (+9 more)
agents/: django_coding_conventions  index.md  template_naming_conventions.md  ui_guide.md
dev_helpers/: tailwindcss_filewatcher.xml
guard_rails/: django_comments.py  health_check.py
helpers/: cbv.py
onlydjango/: onlydjango_globals.py  urls.py
project_setup/: README.md  __init__.py  __main__.py  config_manager.py  manager.py  npm_manager.py  port_manager.py
sampleapp/: signals.py  urls.py  views.py
(+50 files in other folders)
