[tool.poetry]
name = "onlydjango"
version = "0.1.0"
description = ""
authors = ["fauzaanu <fauzaangasim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
django = "^5.1"
python-dotenv = "^1.0.1"
django-allauth = {extras = ["socialaccount"], version = "^64.0.0"}
django-debug-toolbar = "^4.4.2"
huey = "^2.5.1"
redis = "^5.0.8"
django-browser-reload = "^1.15.0"
pytz = "^2024.1"
gunicorn = "^23.0.0"
django-crispy-forms = "^2.2"
crispy-tailwind = "^1.0.3"
pillow = "^10.4.0"
django-custom-error-views = "^0.2.5"
faker = "^26.3.0"
aider-chat = "^0.49.1"
psycopg = {extras = ["binary", "pool"], version = "^3.2.1"}
django-storages = {extras = ["s3"], version = "^1.14.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

